pkg/lang/testdata/ub/inputs/valid/default-within-modifiers.ub
inputs: {
  size: { type: integer, default: 5, minimum: 1, maximum: 10 }
}
