pkg/lang/testdata/ub/inputs/invalid/default-wrong-type.ub
inputs: {
  size: { type: optional(integer, 'x') }
}
